small fix z-index

--- a/app/webroot/less/appheader.less
+++ b/app/webroot/less/appheader.less
@@ -51,10 +51,13 @@
                 bottom: 10px;
                 right: 0;
                 text-align: right;
-                z-index: 1;
 
                 .opt {
                     margin-left: 10px;
+
+                    > .btn {
+                        z-index: 1;
+                    }
 
                     &.addBackgroundBtn {
                         position: relative;
